--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,2 +1,33 @@
-<h1>Courses#index</h1>
-<p>Find me in app/views/courses/index.html.erb</p>
+<div class="row">
+ <div class="col s12">
+ 	<h3 class="center-align">Course listing</h3>
+ </div>
+</div>
+
+<div class="row">
+    <div class="col s6 m6">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">CS11: Intro to Computer Science</span>
+          <p> A thorough intro to computer Science.Computer Science is the study of computers and computational systems. Unlike electrical and computer engineers, computer scientists deal mostly with software and software systems</p>
+        </div>
+        <div class="card-action">
+          <a href="#">Enroll</a>
+          <a href="#">Info</a>
+        </div>
+      </div>
+    </div>
+    <div class="col s6 m6">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">CS12: Intro to Computer Science.</span>
+          <p> An untermediate look at computer Science.Computer Science is the study of computers and computational systems. Unlike electrical and computer engineers, computer scientists deal mostly with software and software systems</p>
+        </div>
+        <div class="card-action">
+          <a href="#">Enroll</a>
+          <a href="#">Info</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
