--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,23 +1,22 @@
 <div class="row">
  <div class="col s12">
- 	<h3 class="center-align">Course listing</h3>
+ 	<h3 class="center-align">Students Directory</h3>
  </div>
 </div>
 
 <div class="row">
-	<% @courses.each do |course| %>
+	<% @students.each do |s| %>
     <div class="col s6 m6">
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
-          <span class="card-title"><%= course.short_name %>: <%= course.name %></span>
-          <p> <%= course.description %></p>
+          <span class="card-title">Name: <%= s.name %></span>
+          <p>Email: <%= s.email %></p>
+          <p> Course Enrollments: None</p>
         </div>
         <div class="card-action">
-          <a href="#">Enroll</a>
-          <a href="#">Info</a>
+          <a href="#">VIEW PROFILE</a>
         </div>
       </div>
     </div>
     <% end %>
   </div>
-
