--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -9,7 +9,7 @@
           <%= form_for(@student, html: {class: "col s12"}) do |f| %>
           <div class="row">
             <div class="input-field col s12">
-             <%= f.text_field :name, placeholder: "Enter your full name", autifocus: true %>
+             <%= f.text_field :name, placeholder: "Enter your full name", autofocus: true %>
              <%= f.label :name %>
            </div>
          </div>
