Updated forms to accept password

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -19,9 +19,22 @@
            <%= f.label :email %>
          </div>
        </div>
+         <div class="row">
+          <div class="input-field col s12">
+           <%= f.password_field :password, placeholder: "Choose a password" %>
+           <%= f.label :password %>
+         </div>
+       </div>
+         <div class="row">
+          <div class="input-field col s12">
+           <%= f.password_field :password, placeholder: "Confirm your password" %>
+           <%= f.label :Password_confirmation %>
+         </div>
+       </div>
+       </div>
         <div class="row">
-          <div class="input-fieldcol s12">
-       <%= f.submit(@student.new_record? ? "SIGN UP" : "Submit updates", class: "btn orange waves-effect waves-light right") %>
+          <div class="input-field col s12">
+       <%= f.button(@student.new_record? ?  '<i class="material-icons right">arrow_forward</i>Sign up'.html_safe :  '<i class="material-icons right">arrow_forward</i>Submit changes'.html_safe, class: "btn orange waves-effect waves-light right, :style=>margin-right:20px;") %>
      </div>
    </div>
        <% end %>
