--- a/app/views/logins/new.html.erb
+++ b/app/views/logins/new.html.erb
@@ -10,7 +10,7 @@
       <div class="row">
           <div class="input-field col s12">
            <%= f.email_field :email, placeholder: "Enter your email address", autofocus: true %>
-           <%= f.label :email %>
+           <%= f.label :email, class: "active" %>
          </div>
        </div>
          <div class="row">
