--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -14,7 +14,7 @@
           <p> Course Enrollments: None</p>
         </div>
         <div class="card-action">
-          <%= link_to "View profile", student_path(student) %>
+          <%= link_to "View profile", student_path(s) %>
         </div>
       </div>
     </div>
